--- a/oudfrontend/src/components/WebPlayer/Queue/Queue.css
+++ b/oudfrontend/src/components/WebPlayer/Queue/Queue.css
@@ -1,5 +1,5 @@
 .queue-container {
-  background-color: #424242;
+  background-color: black;
   bottom: 100px;
   position: fixed;
   z-index: 3;
@@ -9,7 +9,7 @@
   position: fixed;
   bottom: 75px;
   right: 0;
-  background-color: #424242;
+  background-color: black;
   /* background-color: rgba(0, 0, 0, 0.9); */
   overflow-y: scroll;
   overflow-x: hidden;
@@ -61,7 +61,7 @@
   top: 60px;
 }
 .track {
-  background: #424242;
+  background: black;
   width: 100%;
   z-index: 5;
   height: 4.56em;
@@ -290,7 +290,6 @@
     display: none;
   }
 }
-
 @media screen and (max-width: 1261px) {
   .track .content .duration {
     margin-top: -11%;
