--- a/oudfrontend/src/components/CreatePlaylist/createPlaylist.css
+++ b/oudfrontend/src/components/CreatePlaylist/createPlaylist.css
@@ -69,3 +69,9 @@
     padding: 5px 10px;
     height: 27px;
 }
+.invisibleButton{
+    margin-bottom: 10px;
+    background-color: transparent;
+    border: none;
+    padding:0px;
+}
