Switch font to raleway

--- a/oudfrontend/src/index.css
+++ b/oudfrontend/src/index.css
@@ -6,25 +6,5 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  color: white;
+  font-family: "Raleway", sans-serif;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
-
-/* @media only screen and (max-width: 615px) {
-  .now-playing-bar-center {
-    width: 100%;
-  }
-  .now-playing-bar-left,
-  .now-playing-bar-right {
-    width: 0;
-  }
-} */
