fix queue add to playlist

--- a/oudfrontend/src/components/WebPlayer/Queue/Queue.css
+++ b/oudfrontend/src/components/WebPlayer/Queue/Queue.css
@@ -311,3 +311,10 @@
     right: -59%;
   }
 } */
+.queue-add-to-playlist .createPlaylist {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+}
