fix atrist links css

--- a/oudfrontend/src/pages/Artist/Artist.css
+++ b/oudfrontend/src/pages/Artist/Artist.css
@@ -91,6 +91,9 @@
 .artist-compilation {
   margin-top: 2%;
 }
+/* .artist-options-dropdown .dropdwon {
+  float: left;
+} */
 .artist-user .dropdown-menu {
   background-color: black;
 }
