--- a/oudfrontend/src/pages/Artist/Artist.css
+++ b/oudfrontend/src/pages/Artist/Artist.css
@@ -120,8 +120,11 @@
   left: 0;
   height: 100%;
 }
+.artist-user-view-page {
+  width: 100%;
+}
 .artist-user-view-page .profile-user {
-  width: 87%;
+  /* width: 87%; */
 }
 .artis-overview .col-xs-8,
 .artis-overview .col-md-6,
